@@ -9,9 +9,7 @@ Things still needing to be done for the ALPHA release (on experimental livecd):
 		
 	DialogFE:
 		update partitioning stuff (agaffney) (sorry)
-		some sort of "install status" screen
 	gtkFE:
-		Progress bar. (agaffney)
 		custom kernel and kernel bootsplash options.
 		simple partitioning interface (MB and %)
 		add back resizing support
@@ -23,6 +21,7 @@ Things to put into the BETA release:
 	secondary progress bar and X of Y for emerge notifications
 	add steps descriptions and a way for the FEs to show them
 	add documentation?
+	merge progress bar with a tailbox for dialogfe.
 	
 Done:
 Add custom kernel code. (codeman)
@@ -35,3 +34,5 @@ so 'PORTAGE_TMPDIR="/mnt/gentoo/var/tmp"
   PKGDIR="/mnt/gentoo/usr/portage/packages" quickpkg xorg-x11' then
   emerge -K xorg-x11 (agaffney)
 Add networking setup for CC (samyron!)
+dialog progres bar (codeman)
+Progress bar. (agaffney)
