@@ -3,6 +3,9 @@
 
 dialogfe (05 Jan 2005):
 
+  18 Feb 2005; Preston Cody <codeman@gentoo.org>
+  added progress bar for install
+
   9 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
   a few tiny fixes to set_networking()
   
