@@ -1,9 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.72 2005/02/18 19:14:16 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.73 2005/02/18 23:52:38 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
+  18 Feb 2005; Preston Cody <codeman@gentoo.org>
+  added progress bar to dialogfe and fix logger bug in ArchTemplate.
+  
   18 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
   Created GLISayWhat module. Renamed GLISayWhat to GLILocalization. Moved
   lang parameter to __init__()
